@@ -76,6 +76,7 @@ All (GUI):
 wxMSW:
 
 - Implemented wxComboBox::SetEditable().
+- wxSemaphore::Post() returns wxSEMA_OVERFLOW as documented (Christian Walther)
 - Fixed a bug whereby static controls didn't use the correct text colour if the
   parent's background colour had been set (most noticeable when switching to a
   high-contrast theme).
